complete kanji progress add and update
